* Styles for ul/li in body  * Styles to ensure images aren't too tall.

--- a/agsci/atlas/resources/css/styles.scss
+++ b/agsci/atlas/resources/css/styles.scss
@@ -74,6 +74,14 @@ body {
                 border-color: #75ad0a;                
             }
         }
+        
+        ul {
+            margin-bottom: 1em;
+            
+            li {
+                margin-bottom: 0;
+            }
+        }
     }
 }
 
@@ -201,6 +209,7 @@ body.template-atlas_status_summary {
         
         img {
             max-width: 100%;
+            max-height: 775px;
         }
 
         .slideshow-item {
